<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/info_insure_item_rlt_policyd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/doc_dcxsjl_item_bg"
        android:orientation="vertical" >

         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/info_insure_caretel"
                    android:textSize="20px" />

                <Button
                    android:id="@+id/info_insure_item_caretel"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/btn_submit"
                    android:text="95559 点击拨通"
                    android:textColor="#FFF"
                    android:textSize="14sp" />

        </LinearLayout>
        <!--  -->

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
             android:background="#01424b"
             />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_insure_policyd"
                android:textSize="20px" />

            <TextView
                android:id="@+id/info_insure_item_policyd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_null"
                android:textColor="#FFF"
                android:textSize="20px" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#01424b" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_insure_insured"
                android:textSize="20px" />

            <TextView
                android:id="@+id/info_insure_item_insured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_null"
                android:textColor="#FFF"
                android:textSize="20px" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#01424b" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_insure_duetime"
                android:textSize="20px" />

            <TextView
                android:id="@+id/info_insure_item_duetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_null"
                android:textColor="#FFF"
                android:textSize="20px" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#01424b" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_insure_company"
                android:textSize="20px" />

            <TextView
                android:id="@+id/info_insure_item_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_null"
                android:textColor="#FFF"
                android:textSize="20px" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#01424b" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_insure_content"
                android:textSize="20px" />

            <TextView
                android:id="@+id/info_insure_item_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_null"
                android:textColor="#FFF"
                android:textSize="20px" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#01424b" />

       
    </LinearLayout>

</LinearLayout>